; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-copy.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-copy.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @LOG_DEBUG, align 4
  %7 = call i32 @test_setup_logging(i32 %6)
  %8 = call i32 (...) @test_copy_file()
  %9 = call i32 (...) @test_copy_file_fd()
  %10 = call i32 (...) @test_copy_tree()
  %11 = call i32 (...) @test_copy_bytes()
  %12 = load i8**, i8*** %5, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @test_copy_bytes_regular_file(i8* %14, i32 0, i32 -1)
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 0
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @test_copy_bytes_regular_file(i8* %18, i32 1, i32 -1)
  %20 = load i8**, i8*** %5, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 0
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 @test_copy_bytes_regular_file(i8* %22, i32 0, i32 1000)
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @test_copy_bytes_regular_file(i8* %26, i32 1, i32 1000)
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @test_copy_bytes_regular_file(i8* %30, i32 0, i32 32000)
  %32 = load i8**, i8*** %5, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 0
  %34 = load i8*, i8** %33, align 8
  %35 = call i32 @test_copy_bytes_regular_file(i8* %34, i32 1, i32 32000)
  %36 = call i32 (...) @test_copy_atomic()
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_copy_file(...) #1

declare dso_local i32 @test_copy_file_fd(...) #1

declare dso_local i32 @test_copy_tree(...) #1

declare dso_local i32 @test_copy_bytes(...) #1

declare dso_local i32 @test_copy_bytes_regular_file(i8*, i32, i32) #1

declare dso_local i32 @test_copy_atomic(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
